 - Qt: Fix command line debugger closing second game
 - GB MBC: Pocket Cam memory should be accessible without enabling
 - GB Memory: Initialize peripheral pointers
 - GB MBC: Fix SRAM sizes 4 and 5
 - GB Video: Fix 16-bit screenshots (fixes mgba.io/i/826)
 - GB Core: Fix palette loading when loading a foreign config
 - Qt: Fix LOG argument order
Misc:
 - Qt: Don't rebuild library view if style hasn't changed

0.6.0: (2017-07-16)
Features:
 - Library view
 - Sprite viewer
 - Debugging console
 - Improved memory viewer
 - Memory search
 - Command line ability to override configuration values
 - Add option to allow preloading the entire ROM before running
 - Add option for whether rewinding restores save games
 - Savestates now contain any RTC override data
 - Add option to lock video to integer scaling
 - LR35902: Watchpoints
 - LR35902/GB-Z80 disassembler
 - GB: Tile viewer
 - GB: Video/audio channel enabling/disabling
 - GB: Symbol table support
 - GB MBC: Add MBC1 multicart support
 - GBA: Support printing debug strings from inside a game
 - GBA: Better cheat type autodetection
 - Implement keypad interrupts
 - Configuration of gamepad hats
 - Video log recording for testing and bug reporting
 - Debugger: Segment/bank support
 - Debugger: Execution tracing
 - Partial Python scripting support
 - Qt: German translation (by Lothar Serra Mari)
 - Qt: Spanish translation (by Kevin López)
 - Qt: Italian translation (by theheroGAC)
Bugfixes:
 - ARM7: Fix MLA/*MULL/*MLAL timing
 - Core: Fix crash with rewind if savestates shrink
 - Core: Fix interrupting a thread while on the thread (fixes mgba.io/i/692)
 - Core: Fix directory sets crashing on close if base isn't properly detached
 - FFmpeg: Fix overflow and general issues with audio encoding
 - GB: Fix flickering when screen is strobed quickly
 - GB: Fix STAT blocking
 - GB MBC: Fix ROM bank overflows getting set to bank 0
 - GB MBC: Fix swapping carts not detect new MBC
 - GB Timer: Improve DIV reset behavior